--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.20",
     "ajv-formats": "^3.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
